<?xml version="1.0"?>
<package format="3">
  <name>assignment2_rt</name>
  <version>0.0.0</version>
  <description>RT Assignment 2 (Python nodes)</description>
  <maintainer email="omegaruggio42@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>assignment2_rt_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
